Se elmininaron carpetas y archivos innecesarios

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron&display=swap">
     
     <!-- ==================== CSS ==================== -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="fonts/font-awesome/css/all.css">
 </head>
 <body>
