Agregado audio en la etiqueta audio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </header>
         <div class="audio--container">
             <div class="audio--player">
-                <audio src="" class="audio"></audio>
+                <audio src="audio/Regulate.mp3" class="audio"></audio>
             </div>
             <div class="audio--controls">
                 <div class="progress--bar">
