--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <input type="range" min="0" max="100" value="10" step="1.2">
                     </div>
                     <div class="counters">
-                        <span class="current--text">00:00</span>/<span class="duration--text">00:00</span>
+                        <span class="current--text">00:00</span><span class="slashes">//</span> <span class="duration--text">00:00</span>
                     </div>
                 </div>
             </div>
