Añadida nueva etiqueta en menu.html y corregido el tamaño y familia de las lista en el menú, en el archivo app-menu.css

--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navigation menu</title>
     <link rel="stylesheet" href="css/app-menu.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel&display=swap">
 </head>
 
 <body>
