--- a/menu.html
+++ b/menu.html
@@ -32,9 +32,9 @@
     <!-- <script src="js/script.js"></script> -->
     <script src="js/single.js"></script>
     <script>
-        const handle = new HandleToggler();
+        const handle = new HandleToggle();
         handle.update('open', 'active', 50, 0);
-        handle.handleNavigation('.togger', '.app--navigation', 'app--item')
+        handle.handleNavigation('.toggler', '.app--navigation',  '.app--navigation__menu', 'app--item')
     </script>
 </body>
 
