Se realizaron algunas modificación en los archivos menu.html y single.js

--- a/menu.html
+++ b/menu.html
@@ -33,8 +33,8 @@
     <script src="js/single.js"></script>
     <script>
         const handle = new HandleToggle();
-        handle.update('open', 'active', 50, 0);
-        handle.handleNavigation('.toggler', '.app--navigation',  '.app--navigation__menu', 'app--item')
+        handle.update('open', 'active', 50, 0, 0.5, 1);
+        handle.handleNavigation('.toggler', '.app--navigation',  '.app--navigation__menu', 'app--item', '.logo')
     </script>
 </body>
 
