Modified all files, adding and deleting some lines of code

--- a/menu.html
+++ b/menu.html
@@ -21,10 +21,10 @@
                 </div>
                 <ul class="app--navigation__menu" role="menu">
                     <li class="home app--item" role="listitem"><a href="#" class="app--link" role="link">home</a></li>
-                    <li class="about app--item" role="listitem"><a href="#" class="app--link" role="link">about us</a></li>
+                    <li class="about app--item" role="listitem"><a href="#" class="app--link" role="link">about</a></li>
                     <li class="info app--item" role="listitem"><a href="#" class="app--link" role="link">info</a></li>
                     <li class="blog app--item" role="listitem"><a href="#" class="app--link" role="link">blog</a></li>
-                    <li class="contact app--item" role="listitem"><a href="#" class="app--link" role="link">contact us</a></li>
+                    <li class="contact app--item" role="listitem"><a href="#" class="app--link" role="link">contact</a></li>
                 </ul>
             </nav>
         </header>
