--- a/nintendo-switch.html
+++ b/nintendo-switch.html
@@ -7,7 +7,7 @@
     <title>Nintendo Switch Clone</title>
     <link rel="stylesheet" href="fonts/font-awesome/css/all.css">
     <link rel="stylesheet" href="css/nintendo.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -43,13 +43,9 @@
                         <div class="screen">
                             <div class="logo--container">
                                 <div class="left--logo"></div>
-                                <div class="circle"></div>
-                            </div>
-                            <div class="logo--container">
                                 <div class="right--logo"></div>
-                                <div class="circle"></div>
                             </div>
-                            <h2 class="nintendo">nintendo switch</h2>
+                            <h2 class="nintendo">nintendo <span>switch</span><small>tm</small></h2>
                         </div>
                     </div>
                 </div>
