--- a/nintendo-switch.html
+++ b/nintendo-switch.html
@@ -16,6 +16,7 @@
         </header>
         <div class="switch--container">
             <div class="switch">
+                <!-- left joy-con -->
                 <div class="left--joycon joy--con">
                     <div class="minus--button">
                         <i class="fas fa-minus"></i>
@@ -37,7 +38,9 @@
                     </div>
                     <div class="capture--button"></div>
                 </div>
-                <!-- left joy-con -->
+                <!-- end left joy-con -->
+
+                <!-- display box-->
                 <div class="display--box">
                     <div class="display">
                         <div class="screen">
@@ -49,6 +52,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- end display box -->
+
+                <!-- right joy-con -->
                 <div class="right--joycon joy--con">
                     <div class="plus--button">
                         <i class="fas fa-plus"></i>
@@ -64,7 +70,7 @@
                         <i class="fas fa-home home"></i>
                     </div>
                 </div>
-                <!-- right joy-con -->
+                <!-- end right joy-con -->
             </div>
         </div>
     </div>
