--- a/nintendo-switch.html
+++ b/nintendo-switch.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="icon" type="image/png" href="images/logo1.png"> -->
     <title>Nintendo Switch Clone</title>
-    <link rel="stylesheet" href="fonts/font-awesome/css/all.css">
+    <!-- <link rel="stylesheet" href="fonts/font-awesome/css/all.css"> -->
     <link rel="stylesheet" href="css/nintendo.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 </head>
@@ -17,23 +17,13 @@
         <div class="switch--container">
             <div class="switch">
                 <div class="left--joycon joy--con">
-                    <div class="minus--button">
-                        <i class="fas fa-minus"></i>
-                    </div>
-                    <div class="left--lever"></div>
+                    <div class="minus--button"></div>
+                    <div class="left--stick stick"></div>
                     <div class="directional--buttons">
-                        <div class="top button">
-                            <i class="fas fa-caret-up up"></i>
-                        </div>
-                        <div class="bottom button">
-                            <i class="fas fa-caret-down down"></i>
-                        </div>
-                        <div class="left button">
-                            <i class="fas fa-caret-left lf"></i>
-                        </div>
-                        <div class="right button">
-                            <i class="fas fa-caret-right rt"></i>
-                        </div>
+                        <div class="top button"></div>
+                        <div class="down button"></div>
+                        <div class="left button"></div>
+                        <div class="right button"></div>
                     </div>
                     <div class="capture--button"></div>
                 </div>
@@ -50,19 +40,15 @@
                     </div>
                 </div>
                 <div class="right--joycon joy--con">
-                    <div class="plus--button">
-                        <i class="fas fa-plus"></i>
-                    </div>
+                    <div class="plus--button"></div>
                     <div class="action--buttons">
-                        <div class="X--button button">X</div>
-                        <div class="B--button button">B</div>
-                        <div class="Y--button button">Y</div>
-                        <div class="A--button button">A</div>
+                        <div class="X--button button" data-letter="X"></div>
+                        <div class="B--button button" data-letter="B"></div>
+                        <div class="Y--button button" data-letter="Y"></div>
+                        <div class="A--button button" data-letter="A"></div>
                     </div>
-                    <div class="right--lever"></div>
-                    <div class="home--button">
-                        <i class="fas fa-home home"></i>
-                    </div>
+                    <div class="right--stick stick"></div>
+                    <div class="home--button"></div>
                 </div>
                 <!-- right joy-con -->
             </div>
