Se cambiaron algunas etiquetas div, por etiquetas button para dar accesibilidad

--- a/nintendo-switch.html
+++ b/nintendo-switch.html
@@ -15,19 +15,21 @@
             <h1 class="heading">nintendo switch</h1>
         </header>
         <div class="switch--container">
-            <div class="switch">
+            <section class="switch">
+                <!-- Left Joy-Con -->
                 <div class="left--joycon joy--con">
-                    <div class="minus--button"></div>
-                    <div class="left--stick stick"></div>
+                    <button class="minus--button"></button>
+                    <button class="left--stick stick"></button>
                     <div class="directional--buttons">
-                        <div class="top button"></div>
-                        <div class="down button"></div>
-                        <div class="left button"></div>
-                        <div class="right button"></div>
+                        <button class="top button"></button>
+                        <button class="down button"></button>
+                        <button class="left button"></button>
+                        <button class="right button"></button>
                     </div>
-                    <div class="capture--button"></div>
+                    <button class="capture--button"></button>
                 </div>
-                <!-- left joy-con -->
+                <!-- End Left Joy-Con -->
+                <!-- Screen -->
                 <div class="display--box">
                     <div class="display">
                         <div class="screen">
@@ -39,19 +41,21 @@
                         </div>
                     </div>
                 </div>
+                <!-- End Screen -->
+                <!-- Right Joy-Con -->
                 <div class="right--joycon joy--con">
-                    <div class="plus--button"></div>
+                    <button class="plus--button"></button>
                     <div class="action--buttons">
-                        <div class="X--button button" data-letter="X"></div>
-                        <div class="B--button button" data-letter="B"></div>
-                        <div class="Y--button button" data-letter="Y"></div>
-                        <div class="A--button button" data-letter="A"></div>
+                        <button class="X--button button" data-letter="X"></button>
+                        <button class="B--button button" data-letter="B"></button>
+                        <button class="Y--button button" data-letter="Y"></button>
+                        <button class="A--button button" data-letter="A"></button>
                     </div>
-                    <div class="right--stick stick"></div>
-                    <div class="home--button"></div>
+                    <button class="right--stick stick"></button>
+                    <button class="home--button"></button>
                 </div>
-                <!-- right joy-con -->
-            </div>
+                <!-- End Right Joy-Con -->
+            </section>
         </div>
     </div>
 </body>
