Se agregó etiqueta con la clase switch--buttons, en la sección display--box

--- a/nintendo-switch.html
+++ b/nintendo-switch.html
@@ -21,10 +21,10 @@
                     <button class="minus--button" role="button"></button>
                     <button class="left--stick stick" role="button"></button>
                     <div class="directional--buttons" data-state="direction's button">
-                        <button class="top button" role="button"></button>
-                        <button class="down button" role="button"></button>
-                        <button class="left button" role="button"></button>
-                        <button class="right button" role="button"></button>
+                        <button class="top button arrow" role="button"></button>
+                        <button class="down button arrow" role="button"></button>
+                        <button class="left button arrow" role="button"></button>
+                        <button class="right button arrow" role="button"></button>
                     </div>
                     <button class="capture--button" role="button"></button>
                     <button class="shoulder __left" role="button"></button>
@@ -32,6 +32,7 @@
                 <!-- End Left Joy-Con -->
                 <!-- Screen -->
                 <div class="display--box" data-state="display container">
+                    <div class="switch--buttons"></div>
                     <div class="display" data-state="display" role="banner">
                         <div class="screen" data-state="screen">
                             <div class="logo--container" data-state="logo container" role="textbox">
