--- a/floppy-disk.html
+++ b/floppy-disk.html
@@ -9,7 +9,8 @@
 <body>
     <div class="container">
         <div class="floppy__container">
-            <section class="floppy eyelash">
+            <div class="eyelash __right"></div>
+            <section class="floppy">
                 <div class="slider">
                     <div class="discription__container">
                         <h1 class="heading">samsung</h1>
