Se agregó etiqueta div con la clase ellipse

--- a/floppy-disk.html
+++ b/floppy-disk.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Floppy Disk</title>
     <link rel="stylesheet" href="css/floppy.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="container">
@@ -12,7 +14,7 @@
             <div class="eyelash __right"></div>
             <section class="floppy">
                 <div class="slider">
-                    <div class="discription__container">
+                    <div class="description__container">
                         <h1 class="heading">samsung</h1>
                         <h2 class="mf">mf-2hd</h2>
                         <h3 class="ibm">ibm <span>formatted</span></h3>
@@ -22,6 +24,8 @@
                 <!-- slider -->
                 <div class="sticker"></div>
                 <!-- sticker -->
+                <div class="ellipse"></div>
+                <!-- ellipse -->
                 <button class="button arrow left"></button>
                 <!-- arrow -->
                 <div class="locker down right"></div>
