Corregido los comentarios

--- a/floppy-disk.html
+++ b/floppy-disk.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="floppy__container">
-            <div class="eyelash __right"></div>
+            <div class="eyelash"></div>
             <section class="floppy">
                 <div class="slider">
                     <div class="description__container">
@@ -21,20 +21,20 @@
                         <p class="size">1.44mb</p>   
                     </div>
                 </div>
-                <!-- slider -->
+                <!-- end slider -->
                 <div class="sticker"></div>
-                <!-- sticker -->
+                <!-- end sticker -->
                 <div class="ellipse"></div>
-                <!-- ellipse -->
-                <button class="button arrow left"></button>
-                <!-- arrow -->
-                <div class="locker down right"></div>
-                <!-- locker -->
+                <!-- end ellipse -->
+                <button class="button arrow"></button>
+                <!-- end arrow -->
+                <button class="button locker"></button>
+                <!-- end locker -->
             </section>
-            <!-- floppy disk -->
+            <!-- end floppy disk -->
         </div>
-        <!-- floppy container -->
+        <!-- end floppy container -->
     </div>
-    <!-- container -->
+    <!-- end container -->
 </body>
 </html>
