Proyecto 12: FAQ (Frequently Asked Questions)!
Añadido título

--- a/day12-FAQ/index.html
+++ b/day12-FAQ/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <h1 class="heading">frequently asked questions!</h1>
     <div class="faq--container">
         <div class="faq active">
             <h3 class="faq--title">why shouldn't we trust atoms?</h3>
