Proyecto 12: FAQ (Frequently Asked Questions)
added new features at the project

--- a/day12-FAQ/index.html
+++ b/day12-FAQ/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <title>Document</title>
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Roboto&display=swap" rel="stylesheet">
+    <title>FAQ</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -14,8 +19,7 @@
             <h3 class="faq--title">why shouldn't we trust atoms?</h3>
             <p class="faq--text">they make up everything.</p>
             <button class="faq--toggle">
-                <i class="fas fa-chevron-down"></i>
-                <i class="fas fa-times"></i>
+                <i class="fas fa-chevron-down down"></i>
             </button>
         </div>
 
@@ -23,8 +27,7 @@
             <h3 class="faq--title">what do you call someone with no body and no nose?</h3>
             <p class="faq--text">nobody knows.</p>
             <button class="faq--toggle">
-                <i class="fas fa-chevron-down"></i>
-                <i class="fas fa-times"></i>
+                <i class="fas fa-chevron-down down"></i>
             </button>
         </div>
 
@@ -32,8 +35,7 @@
             <h3 class="faq--title">what the object-oriented way to become wealthy?</h3>
             <p class="faq--text">inheritance.</p>
             <button class="faq--toggle">
-                <i class="fas fa-chevron-down"></i>
-                <i class="fas fa-times"></i>
+                <i class="fas fa-chevron-down down"></i>
             </button>
         </div>
 
@@ -41,8 +43,7 @@
             <h3 class="faq--title">how many tickles does it take to tickle an octupus?</h3>
             <p class="faq--text">ten-tickles.</p>
             <button class="faq--toggle">
-                <i class="fas fa-chevron-down"></i>
-                <i class="fas fa-times"></i>
+                <i class="fas fa-chevron-down down"></i>
             </button>
         </div>
 
@@ -50,8 +51,7 @@
             <h3 class="faq--title">what is 1 + 1?</h3>
             <p class="faq--text">depends on who are you asking.</p>
             <button class="faq--toggle">
-                <i class="fas fa-chevron-down"></i>
-                <i class="fas fa-times"></i>
+                <i class="fas fa-chevron-down down"></i>
             </button>
         </div>
     </div>
