Proyecto 13: Random Choice Picker
Añadido contenido en los archivos script.js y styles.css

--- a/day13-RandomChoicePicker/index.html
+++ b/day13-RandomChoicePicker/index.html
@@ -15,7 +15,7 @@
         <div class="input--container">
             <textarea id="choice--picker" class="picker" placeholder="Enter choice here!"></textarea>
 
-            <div class="tags"></div>
+            <div class="tags" id="tags"></div>
         </div>
     </div>
     <script src="js/script.js"></script>
