Proyecto 16: Background Slider
Agregadas nuevas imágenes en el archivo index.html

--- a/day16-BackgroundSlider/index.html
+++ b/day16-BackgroundSlider/index.html
@@ -9,11 +9,26 @@
 </head>
 <body>
     <div class="container">
+        <div class="slide active" style="
+          background-image: url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2100&amp;q=80');
+        "></div>
+        <div class="slide" style="
+          background-image: url('https://images.unsplash.com/photo-1511593358241-7eea1f3c84e5?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1934&amp;q=80');
+        "></div>
+        <div class="slide" style="
+          background-image: url('https://images.unsplash.com/photo-1495467033336-2effd8753d51?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2100&amp;q=80');
+        "></div>
+        <div class="slide" style="
+          background-image: url('https://images.unsplash.com/photo-1522735338363-cc7313be0ae0?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2689&amp;q=80');
+        "></div>
+        <div class="slide" style="
+          background-image: url('https://images.unsplash.com/photo-1559087867-ce4c91325525?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2100&amp;q=80');
+        "></div>
         <div class="buttons--container">
-            <button class="arrow left">
+            <button class="arrow left" id="prev">
                 <span class="material-icons icon">chevron_left</span>
             </button>
-            <button class="arrow right">
+            <button class="arrow right" id="next">
                 <span class="material-icons icon">chevron_right</span>
             </button>
         </div>
