Proyecto 17: Drink Water
Nuevas líneas de código, fueron añadidas  en los archivos styles.scss y script.js

--- a/day17-DrinkWater/index.html
+++ b/day17-DrinkWater/index.html
@@ -16,8 +16,8 @@
         <h3 class="sub--heading">goal: <span class="index">2</span> <span class="lt">liters</span></h3>
 
         <div class="cup">
-            <div class="remained">
-                <span class="liters">2L</span>
+            <div class="remained" id="remained">
+                <span class="liters" id="liters">2L</span>
                 <small>remained</small>
             </div>
             <div class="percentage" id="percentage">12.5%</div>
