Proyecto 18: Movie App
Añadiendo cambios en éste preyecto

--- a/day18-MovieApp/index.html
+++ b/day18-MovieApp/index.html
@@ -6,16 +6,21 @@
     <!-- FONTS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&display=swap">
     <title>Movie App</title>
-    <!-- STYLES -->
+    <!-- CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header class="header">
-        <form action="#" id="form" class="form--container">
+        <form action="#" id="form" class="search--container">
             <input id="search" type="text" class="search" placeholder="Search...">
+            <button class="search--btn">
+            <i class="fas fa-search"></i>
+        </button>
         </form>
     </header>
-    <main id="main">
+    <main id="main" class="container">
         <div class="movie">
             <img src="https://image.tmdb.org/t/p/w1280/1f3qspv64L5FXrRy0MF8X92ieuw.jpg" alt="Monsters of Man">
             <div class="movie-info">
