Proyecto 18: Movie App
Se añadió código al archivo script.js

--- a/day18-MovieApp/index.html
+++ b/day18-MovieApp/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <form action="#" id="form" class="search--container">
+        <form id="form" class="search--container">
             <input id="search" type="text" class="search" placeholder="Search...">
             <button class="search--btn">
             <i class="fas fa-search"></i>
