--- a/day25-StickyNavigation/index.html
+++ b/day25-StickyNavigation/index.html
@@ -17,6 +17,7 @@
     <div class='container'>
         <header class="header">
             <nav class="navigation">
+                    <h2>my<span>website</span></h2>
                     <ul class="menu">
                         <li class="item">
                             <a href='#' class="link">home</a>
@@ -32,6 +33,8 @@
                         </li>
                     </ul>
             </nav>
+            <h1>welcome to my website</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </header>
         <main class="main__section">
             <section class="section-one">
