--- a/day25-StickyNavigation/index.html
+++ b/day25-StickyNavigation/index.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <meta name='description' content=''>
     <meta name='author' content=''>
-    <title>Document</title>
+    <title>Sticky Navigation</title>
     <!-- Mobile Specific Metas -->
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <!-- Fonts -->
@@ -34,7 +34,7 @@
                     </ul>
             </nav>
             <h1>welcome to my website</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, ipsam? Tempore dolores, ab consequuntur minus id velit quia?</p>
         </header>
         <main class="main__section">
             <section class="section-one">
