--- a/day28-GithubProfiles/index.html
+++ b/day28-GithubProfiles/index.html
@@ -18,9 +18,7 @@
         <form  class="user--form" id="form">
             <input type="text" id="search" placeholder="Search a Github User">
         </form>
-        <main class="main" id="main">
-            
-        </main>
+        <main class="main" id="main"></main>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js" integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ==" crossorigin="anonymous"></script>
     <script src='js/script.js'></script>
