Proyecto 29: Double Click Heart

--- a/day29-DoubleClickHeart/index.html
+++ b/day29-DoubleClickHeart/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <h3>double click on the image to i.fas.fa-heart it</h3>
-        <small>you liked it <span>0</span> times</small>
+        <h3>double click on the image to <i class="fas fa-heart"></i> it</h3>
+        <small>you liked it <span id="times">0</span> times</small>
 
         <div class="car"></div>
     </div>
