Proyecto 35: Image Carousel

--- a/day35-ImageCarousel/index.html
+++ b/day35-ImageCarousel/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class='container'>
-        <div class="gallery--container" data-image="gallery">
+        <div class="gallery--container" id="gallery" data-image="images">
             <img src="images/image1.jpg" alt="Foto de Anna Shvets en Pexels">
             <img src="images/image2.jpg" alt="Foto de Anna Tarazevich en Pexels">
             <img src="images/image3.jpg" alt="Foto de Isabela Catão en Pexels">
@@ -31,6 +31,6 @@
             </button>
         </div>
     </div>
-    <script src='js/script.js'></script>
+    <!-- <script src='js/script.js'></script> -->
 </body>
 </html>
