--- a/day35-ImageCarousel/index.html
+++ b/day35-ImageCarousel/index.html
@@ -31,6 +31,6 @@
             </button>
         </div>
     </div>
-    <!-- <script src='js/script.js'></script> -->
+    <script src='js/script.js'></script>
 </body>
 </html>
