--- a/day41-VerifyAccount/index.html
+++ b/day41-VerifyAccount/index.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <meta name='description' content=''>
     <meta name='author' content=''>
-    <title>Document</title>
+    <title>Verify Account</title>
     <!-- Mobile Specific Metas -->
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <!-- Fonts -->
